--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,22 @@
 	<div class="container">
 		<div class="col-sx-12">
 			<div class="row">
-				<div class="col-xs-12">
-			<p>Fantastic!</p>
+				<div class="col-xs-2">
+					<h1>Meny</h1>
+
 				</div>
-				
-			</div>
-
-		</div>
-
-
+				<div class="col-xs-10">
+					<h1>Content</h1>
+				</div>
+			</div><!--MENY & CONTANT FINISH COL-->
 
 
-	</div>
+
+
+
+		</div><!--FIRST COL-->
+		
+	</div><!--SHUTS CONTAINER-->
 
 	</body>
 </html>
