Testing index.html
+ index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<div class="col-sx-12">
 			<div class="row">
 				<div class="col-xs-2">
-					<h1>Meny</h1>
+					<h1>Meny och annat</h1>
 
 				</div>
 				<div class="col-xs-10">
