--- a/templates/login.html
+++ b/templates/login.html
@@ -17,9 +17,11 @@
 				<div class="col-xs-4">
 					<h1>Fantastic Teaching</h1>
 					<div class="input-group">
-					  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-					  <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
-					  <button type="submit" class="btn btn-default btn-lg"> Sign in </button>
+						<form method="get" action="">
+						  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+						  <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+						  <button type="submit" class="btn btn-default btn-lg"> Sign in </button>
+						 </form>
 					</div>
 				</div>
 				<div class="col-xs-4">
