--- a/templates/login.html
+++ b/templates/login.html
@@ -18,8 +18,8 @@
 					<h1>Fantastic Teaching</h1>
 					<div class="input-group">
 						<form method="get" action="">
-						  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-						  <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+						  <input type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+						  <input type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
 						  <button type="submit" class="btn btn-default btn-lg"> Sign in </button>
 						 </form>
 					</div>
