--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 				<div class="col-xs-4">
 					<h1>Fantastic Teaching</h1>
 					<div class="input-group">
-						<form method="get" action="">
+						<form method="post" action="">
 						  <input type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 						  <input type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
 						  <button type="submit" class="btn btn-default btn-lg"> Sign in </button>
