--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,27 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Fantastic Teaching</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	</head>
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Fantastic Teaching</title>
+	<!-- Latest compiled and minified CSS BOOTSTRAP -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
+<body>
 	<div class="container">
-		<div class="col-sx-12">
-			<div class="row">
-				<div class="col-xs-2">
-					<h1>Meny och annat</h1>
-
-				</div>
-				<div class="col-xs-10">
-					<h1>Content</h1>
-				</div>
-			</div><!--MENY & CONTANT FINISH COL-->
-
-
-
-
-
-		</div><!--FIRST COL-->
-		
+		<div class="row">
+			<div class="col-xs-12">
+				<p><h5>Welcome {{user}}!</h5></p>
+				<form method="get" action="">
+				<button type="submit" name="logout" value="{{sessionName}}">Logout {{user}}</button>
+				</form>
+			</div>
+			<div class="col-xs-2">
+				<h1>Meny och annat</h1>
+			</div>
+			<div class="col-xs-10">
+				<h1>Content</h1>
+			</div>
+		</div><!--MENY & CONTANT FINISH COL-->		
 	</div><!--SHUTS CONTAINER-->
-
-	</body>
+</body>
 </html>
