--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 			<div class="col-xs-12">
 				<p><h5>Welcome {{user}}!</h5></p>
 				<form method="get" action="">
-				<button type="submit" name="logout" value="{{sessionName}}">Logout {{user}}</button>
+				<button type="submit" name="logout" value="{{sessionUserID}}">Logout {{user}}</button>
 				</form>
 			</div>
 			<div class="col-xs-2">
