changed user class to account class
fixed session problem on login. code needs to be cleaned though

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,17 @@
 			</div>
 			<div class="col-xs-10">
 				<h1>Content</h1>
+				<form method='post' action="">
+				<input type='text' name='title' placeholder='Add title...'>
+					
+				</textarea>
+				<br><br>
+				<textarea rows='10' cols='60' name='text' placeholder='Write your text...'>
+					
+				</textarea>
+				<br><br>
+				<input type='submit' name='postContent' value='Post'>
+				</form>
 			</div>
 		</div><!--MENY & CONTANT FINISH COL-->		
 	</div><!--SHUTS CONTAINER-->
