--- a/templates/index.html
+++ b/templates/index.html
@@ -22,21 +22,28 @@
 			<div class="col-xs-10">
 				<h1>Content</h1>
 				<form method='post' action="">
-				<input type='text' name='title' placeholder='Add title...'>
-					
-				</textarea>
+				<input type='text' name='title' placeholder='Add title...'></textarea>
 				<br><br>
-				<textarea rows='10' cols='60' name='text' placeholder='Write your text...'>
-					
-				</textarea>
-				<br><br>
+				<textarea rows='10' cols='60' name='text' placeholder='Write your text...'></textarea>
+				
 				<input type='submit' name='postContent' value='Post'>
 				</form>
-				    {% for row in viewcontent %}
+				<br><br>
+				<form action="" method="post">
+				<input required type="text" name="search" placeholder="Search for">
+				<input type="submit" value="Search">
+				</form>
+				<br><br>
+				{% if content %}
+				    {% for row in content %}
         			<h4 class="media-heading">{{ row.title|e }}</h4>
         			<div class="media-body">{{ row.text|e }}</div>
         			<hr>
     				{% endfor %}
+    			{% endif %}
+    			{% if showBtn %}
+    				{{showBtn| raw}}
+    			{% endif %}
 
 
 
