--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,11 @@
 				
 				<input type='submit' name='postContent' value='Post'>
 				</form>
+				<form method="post" enctype="multipart/form-data">
+				    Select image to upload:
+				    <input type="file" name="fileToUpload" id="fileToUpload">
+				    <input type="submit" value="Upload Image" name="addFile">
+				</form>
 				<br><br>
 				<form action="" method="post">
 				<input required type="text" name="search" placeholder="Search for">
