new function for adding accounts
new form, salted and hashed password when adding new user

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<p><h5>Welcome {{user}}!</h5></p>
-				<form method="get" action="">
+				<form method="post" action="">
 				<button type="submit" name="logout" value="{{sessionUserID}}">Logout {{user}}</button>
 				</form>
 			</div>
