--- a/templates/login.html
+++ b/templates/login.html
@@ -12,19 +12,32 @@
 	<div class="container">
 		<div class="col-sx-12">
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-sm-12">
+				<h1>Fantastic Teaching</h1>
 				</div>
-				<div class="col-xs-4">
-					<h1>Fantastic Teaching</h1>
-					<div class="input-group">
+				<div class="col-sm-6">
+					<h3>Login:</h3>
+					<div class="form-group">
 						<form method="post" action="">
-						  <input required type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-						  <input required type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
-						  <button type="submit" class="btn btn-default btn-lg"> Sign in </button>
-						 </form>
+						<label for="username">Username</label>
+						<input required type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+						<label for="Password">Password</label>
+						<input required type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+						<button type="submit" class="btn btn-default btn-lg"> Sign in </button>
+						</form>
 					</div>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-sm-6">
+				<h3>New User?</h3>
+					<div class="form-group">
+						<form method="post" action="">
+						<label for="newUsername">New Username</label>
+						  <input required type="text" name="newUsername" class="form-control" placeholder="New Username" aria-describedby="basic-addon1">
+						  <label for="newPassword">New Password</label>
+						  <input required type="password" name="newPassword" class="form-control" placeholder="New Password" aria-describedby="basic-addon1">
+						  <button type="submit" name="newUser" class="btn btn-default btn-lg">Create new user</button>
+						 </form>
+					</div>
 				</div>
 				
 			</div>
