--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 		<div class="col-sx-12">
 			<div class="row">
 				<div class="col-sm-12">
-				<h1>Fantastic Teaching</h1>
+				<h1>{{title}}</h1>
 				</div>
 				<div class="col-sm-6">
 					<h3>Login:</h3>
@@ -23,7 +23,7 @@
 						<input required type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 						<label for="Password">Password</label>
 						<input required type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
-						<button type="submit" class="btn btn-default btn-lg"> Sign in </button>
+						<button type="submit" name="login" class="btn btn-default btn-lg">Sign in</button>
 						</form>
 					</div>
 				</div>
