--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,16 @@
 						<input class="form-control" type='text' name='title' placeholder='Add title...'></textarea>
 					</div>
 					<div class="form-group">
+						<label for="subject">Subject:</label>
+						<select class="form-control" name='subject'>
+						<option>Svenska</option>
+						<option>Geografi</option>
+						<option>Historia</option>
+						<option>Matte</option>
+						</select>
+						</textarea>
+					</div>
+					<div class="form-group">
 						<label for="text">Text:</label>
 						<textarea class="form-control" name='text' placeholder='Write your text...'></textarea>
 					<input class="btn btn-default" type='submit' name='postContent' value='Post'>
@@ -89,6 +99,7 @@
 							{# <img src="..." alt="..."> #}
 								<div class="caption">
 								<h3>{{ row.title|e }}</h3>
+								<p><i>{{ row.subject|e }}</i></p>
 								<p>{{ row.text|e }}</p>
 								{# <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> #}
 								</div>
