--- a/templates/login.html
+++ b/templates/login.html
@@ -35,6 +35,8 @@
 						  <input required type="text" name="newUsername" class="form-control" placeholder="New Username" aria-describedby="basic-addon1">
 						  <label for="newPassword">New Password</label>
 						  <input required type="password" name="newPassword" class="form-control" placeholder="New Password" aria-describedby="basic-addon1">
+						  <label for="allowedEmail">Type in your pre-approved E-mail:</label>
+						  <input required type="email" name="allowedEmail" class="form-control" placeholder="Pre-approved E-mail . . ." aria-describedby="basic-addon1">
 						  <button type="submit" name="newUser" class="btn btn-default btn-lg">Create new user</button>
 						 </form>
 					</div>
