changed files+new db
post changed to get. new db

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 		<div class="row user-header">
 			<div class="col-sm-4">
 				<h3>Welcome {{user}}!</h3>
-				<form method="post" action="">
+				<form method="get" action="">
 					<div class="form-group">
 						<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
 					</div>
