button type changed
button changed to submit

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
 					<div class="input-group">
 				      <input required type="text" class="form-control" name="search" placeholder="Search for...">
 				      <span class="input-group-btn">
-				        <button class="btn btn-default" type="button" value="Search">Search</button>
+				        <button class="btn btn-default" type="submit" value="Search">Search</button>
 				      </span>
 					</div>			
 				</form>
@@ -93,7 +93,7 @@
 					<div class="input-group">
 					   <input class="form-control" type="file" name="fileToUpload" id="fileToUpload">
 						<span class="input-group-btn">
-					   <input class="btn btn-default" type="button" value="Upload Image" name="addFile"></button>
+					   <input class="btn btn-default" type="submit" value="Upload Image" name="addFile"></button>
 				      </span>
 				   </div>
 				</form>
