--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
 						<label for="username">Username</label>
 						<input required type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 						<label for="Password">Password</label>
-						<input required type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+						<input required type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
 						<button type="submit" name="login" class="btn btn-default btn-lg">Sign in</button>
 						</form>
 					</div>
@@ -34,9 +34,9 @@
 						<label for="newUsername">New Username</label>
 						  <input required type="text" name="newUsername" class="form-control" placeholder="New Username" aria-describedby="basic-addon1">
 						  <label for="newPassword">New Password</label>
-						  <input required type="password" name="newPassword" class="form-control" placeholder="New Password" aria-describedby="basic-addon1">
+						  <input required type="password" name="newPassword" class="form-control" placeholder="New Password" aria-describedby="basic-addon1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
 						  <label for="allowedEmail">Type in your pre-approved E-mail:</label>
-						  <input required type="email" name="allowedEmail" class="form-control" placeholder="Pre-approved E-mail . . ." aria-describedby="basic-addon1">
+						  <input required type="email" name="allowedEmail" class="form-control" placeholder="Pre-approved E-mail . . ." aria-describedby="basic-addon1" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"><!--An <input> element with type="email" that must be in the following order: characters@characters.domain (characters followed by an @ sign, followed by more characters, and then a "." After the "." sign, you can only write 2 to 3 letters from a to z:-->
 						  <button type="submit" name="newUser" class="btn btn-default btn-lg">Create new user</button>
 						 </form>
 					</div>
