--- a/templates/changeUser.html
+++ b/templates/changeUser.html
@@ -1,10 +1,10 @@
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Logga in för fan</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<style type="text/css">
+<head>
+	<meta charset="UTF-8">
+	<title>Logga in för fan</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<style type="text/css">
 
 		.user-header{
 			background-color: lightblue;
@@ -33,29 +33,32 @@
 			background-image: none;
 		}
 	</style>
-	</head>
-	<body>
+</head>
+<body>
 	<div class="container-fluid">
 		<div class="col-sx-12">
 			<div class="row user-header">
-				<div class="col-sm-12">
+				<div class="col-sm-6">
+					<h1>{{title}}</h1>
+					<p>{{user}}, you can change your password here.</p>
+				</div>
+				<div class="col-sm-6">
 					<h3>Edit user settings</h3>
 					<div class="form-group">
 						<form method="post" action="">
 							<label for="updatedPassword">New Password:</label>
-							<input required type="password" name="updatedPassword" class="form-control" placeholder="New Password . . ." aria-describedby="basic-addon1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+							<input required type="password" name="updatedPassword" class="form-control" placeholder="New Password . . ." pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
 							<button class="transparentbtn" name="userForUpdate" value="{{sessionUserID}}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Change Password</button>
 						</form>
 					</div>
+					<div class="form-group">
+						<form method="get" action="">
+							<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
+						</form>	
+					</div>
 				</div>
 			</div>
-
 		</div>
-
-
-
-
 	</div><!--Stänger container-->
-
-	</body>
+</body>
 </html>
