--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,16 @@
 
 	<div class="container-fluid">
 		<div class="row user-header">
-			<div class="col-sm-4">
+			<div class="col-lg-12">
+				<h1>{{title}}</h1>
+			</div>
+			<div class="col-sm-6">
 				<h3>Welcome {{user}}!</h3>
+					<div class="form-group">
+						<form method="post" action="">
+							<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Publish new content</button>
+						</form>	
+					</div>
 				<form method="get" action="">
 					<div class="form-group">
 						<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Change password</button>
@@ -72,39 +80,11 @@
 					</div>			
 				</form>
 			</div>
-			<div class="col-sm-8">
-				<h3>Publish new content</h3>
-				<form method='post' action="">
-					<div class="form-group">
-						<label for="title">Title:</label>
-						<input class="form-control" type='text' name='title' placeholder='Add title...'></textarea>
-					</div>
-					<div class="form-group">
-						<label for="subject">Subject:</label>
-						<select class="form-control" name='subject'>
-						<option value="Svenska">Svenska</option>
-						<option value="Geografi">Geografi</option>
-						<option value="Historia">Historia</option>
-						<option value="Matte">Matte</option>
-						</select>
-						</textarea>
-					</div>
-					<div class="form-group">
-						<label for="text">Text:</label>
-						<textarea class="form-control" name='text' placeholder='Write your text...'></textarea>
-					<input class="btn btn-default" type='submit' name='postContent' value='Post'>
-					</div>
-				</form>
-				<form method="post" enctype="multipart/form-data">
-					<label for="fileToUpload">File:</label>
-					<div class="input-group">
-					   <input class="form-control" type="file" name="fileToUpload" id="fileToUpload">
-						<span class="input-group-btn">
-					   <input class="btn btn-default" type="submit" value="Upload Image" name="addFile"></button>
-				      </span>
-				   </div>
-				</form>
-			</div>
+			{% if publishNew %}
+				<div class="col-sm-6">
+				{% include "publishNew.html" %}
+				</div>
+			{% endif %}
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
