--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,15 @@
 						</select>
 						</textarea>
 					</div>
+					<div class="form-group">
+						<label for="year">Search on recommended year:</label>
+						<select class="form-control" name='searchYear'>
+						<option value="1-2">1-2</option>
+						<option value="3-5">3-5</option>
+						<option value="6-7">6-7</option>
+						<option value="8-9">8-9</option>
+						</select>
+					</div>
 					<div class="input-group">
 				      <input required type="text" class="form-control" name="search" placeholder="Search for...">
 				      <span class="input-group-btn">
@@ -95,10 +104,11 @@
 							<div class="thumbnail">
 							{# <img src="..." alt="..."> #}
 								<div class="caption">
-								<h3>{{ row.title|e }}</h3>
-								<p class="grayText"><i>Published {{ row.timestamp|e }}</i></p>
-								 <p><b>{{ row.subject|e }}</b></p>
-								<p>{{ row.text|e }}</p>
+								<h3>{{row.title|e}}</h3>
+								<p class="grayText"><i>Published {{row.timestamp|e}}</i></p>
+								 <p><b>Subject: {{row.subject|e}}</b></p>
+								 <p><b>Recommended for year: {{row.year|e}}</b></p>
+								<p>{{row.text|e}}</p>
 								{# <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> #}
 								</div>
 							</div>
