--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -14,6 +14,15 @@
 		</select>
 	</div>
 	<div class="form-group">
+		<label for="year">Suitable for year:</label>
+		<select class="form-control" name='year'>
+		<option value="1-2">1-2</option>
+		<option value="3-5">3-5</option>
+		<option value="6-7">6-7</option>
+		<option value="8-9">8-9</option>
+		</select>
+	</div>
+	<div class="form-group">
 		<label for="text">Text:</label>
 		<textarea class="form-control" name='text' placeholder='Write your text...'></textarea>
 		<input type="hidden" name="publishNew" value=NULL>
