--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,14 @@
 		.grayText{
 			color: silver;
 		}
+		.h1link{
+			color: black;
+			text-decoration: none;
+		}
+		.h1link:hover, .h1link:focus, .h1link:active{
+			color: black;
+			text-decoration: none;
+		}
 		.user-header{
 			background-color: lightblue;
 		}
@@ -42,7 +50,7 @@
 	<div class="container-fluid">
 		<div class="row user-header">
 			<div class="col-lg-12">
-				<h1>{{title}}</h1>
+				<a class="h1link" href="http://192.168.33.10/Fantastic-Teaching/index.php"><h1>{{title}}</h1></a>
 			</div>
 			<div class="col-sm-6">
 				<h3>Welcome {{user}}!</h3>
@@ -82,7 +90,7 @@
 						</select>
 					</div>
 					<div class="input-group">
-				      <input required type="text" class="form-control" name="search" placeholder="Search for...">
+				      <input type="text" class="form-control" name="search" placeholder="Search for...">
 				      <span class="input-group-btn">
 				        <button class="btn btn-default" type="submit" value="Search">Search</button>
 				      </span>
@@ -102,7 +110,9 @@
 					{% for row in content %}
 						<div class="col-sm-6 col-md-4">
 							<div class="thumbnail">
-							{# <img src="..." alt="..."> #}
+								{% if row.file %}
+								<img src="http://192.168.33.10/Fantastic-Teaching/uploads/{{ row.file|e }}" alt="article image">
+								{% endif %}
 								<div class="caption">
 								<h3>{{row.title|e}}</h3>
 								<p class="grayText"><i>Published {{row.timestamp|e}}</i></p>
@@ -110,7 +120,6 @@
 								 <p><b>Recommended for year: {{row.year|e}}</b></p>
 								<p>{{row.text|e}}</p>
 								{# <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> #}
-								<img src="/test/uploads/{{ row.file|e }}" width="150">
 								</div>
 							</div>
 						</div>
