updates variablenames and added functionality to embed youtube videos

--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -26,6 +26,7 @@
 		<label for="text">Text:</label>
 		<textarea class="form-control" name='text' placeholder='Write your text...'></textarea>
 		<input type="hidden" name="publishNew" value=NULL>
+		<input class="form-control" type='text' name='video' placeholder='Embed video..'>
 		<input class="form-control" type="file" name="fileToUpload" id="fileToUpload">
 		<input class="btn btn-default" type='submit' name='postContent' value='Post'>
 	</div>
