--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,10 @@
 								 <p><b>Subject: {{row.subject|e}}</b></p>
 								 <p><b>Recommended for year: {{row.year|e}}</b></p>
 								<p>{{row.text|e}}</p>
+								<div class="embed-responsive embed-responsive-16by9">
+  									{{row.video|raw}}
+								</div>
+								
 								{# <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> #}
 								</div>
 							</div>
