--- a/templates/index.html
+++ b/templates/index.html
@@ -50,15 +50,20 @@
 	<div class="container-fluid">
 		<div class="row user-header">
 			<div class="col-lg-12">
-				<a class="h1link" href="http://192.168.33.10/Fantastic-Teaching/index.php"><h1>{{title}}</h1></a>
+				<a class="h1link" href="http://192.168.33.10/Fantastic-Teaching/"><h1>{{title}}</h1></a>
 			</div>
 			<div class="col-sm-6">
 				<h3>Welcome {{user}}!</h3>
-					<div class="form-group">
-						<form method="post" action="">
-							<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Publish new content</button>
-						</form>	
-					</div>
+				<div class="form-group">
+					<form method="post" action="">
+						<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Publish new content</button>
+					</form>	
+				</div>
+				<div class="form-group">
+					<form method="post" action="">
+						<button class="transparentbtn" type="submit" name="showGoals" value="myGoals"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> List of teaching goals</button>
+					</form>	
+				</div>
 				<form method="get" action="">
 					<div class="form-group">
 						<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Change password</button>
@@ -97,11 +102,33 @@
 					</div>			
 				</form>
 			</div>
+			{% if changeUser %}
+				<div class="col-sm-6">
+				{% include "changeUser.html" %}
+				</div>
+			{% endif %}
 			{% if publishNew %}
 				<div class="col-sm-6">
 				{% include "publishNew.html" %}
 				</div>
 			{% endif %}
+			{% if showGoals %}
+				<div class="col-sm-6">
+				{% include "goals.html" %}
+			{% endif %}
+			{% if goals %}
+				{% for row in goals %}
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+								<h5>{{ row.goal }}</h5>
+								 <p><b>Subject: {{row.subject|e}}</b></p>
+								 <p><b>Recommended for year: {{row.year|e}}</b></p>
+								<p>{{row.text|e}}</p>							
+						</div>
+					</div>
+				{% endfor %}
+			{% endif %}
+			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
