--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
 								 <p><b>Recommended for year: {{row.year|e}}</b></p>
 								<p>{{row.text|e}}</p>
 								<div class="embed-responsive embed-responsive-16by9">
-  									{{row.video|raw}}
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/{{row.video|raw}}" frameborder="0" allowfullscreen></iframe>
 								</div>
 								
 								{# <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> #}
