--- a/templates/index.html
+++ b/templates/index.html
@@ -46,121 +46,55 @@
 	</style>
 </head>
 <body>
-
 	<div class="container-fluid">
 		<div class="row user-header">
 			<div class="col-lg-12">
 				<a class="h1link" href="http://192.168.33.10/Fantastic-Teaching/"><h1>{{title}}</h1></a>
 			</div>
-			<div class="col-sm-6">
-				<h3>Welcome {{user}}!</h3>
-				<div class="form-group">
-					<form method="post" action="">
-						<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Publish new content</button>
-					</form>	
+			<div class="col-sm-8">
+				{% include "admin.html" %}
+				<div class="row">
+					<div class="col-sm-12">
+						{% if changeUser %}
+						{% include "changeUser.html" %}
+						{% endif %}
+					</div>
 				</div>
-				<div class="form-group">
-					<form method="post" action="">
-						<button class="transparentbtn" type="submit" name="showGoals" value="myGoals"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> List of teaching goals</button>
-					</form>	
-				</div>
-				<form method="get" action="">
-					<div class="form-group">
-						<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Change password</button>
-					</div>
-				</form>
-				<form method="get" action="">
-					<div class="form-group">
-						<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
-					</div>
-				</form>				 
-				<form method="post" action="">
-					<div class="form-group">
-						<label for="subject">Search within subject:</label>
-						<select class="form-control" name="searchSubject">
-						<option value="Svenska">Svenska</option>
-						<option value="Geografi">Geografi</option>
-						<option value="Historia">Historia</option>
-						<option value="Matte">Matte</option>
-						</select>
-						</textarea>
-					</div>
-					<div class="form-group">
-						<label for="year">Search on recommended year:</label>
-						<select class="form-control" name='searchYear'>
-						<option value="1-2">1-2</option>
-						<option value="3-5">3-5</option>
-						<option value="6-7">6-7</option>
-						<option value="8-9">8-9</option>
-						</select>
-					</div>
-					<div class="input-group">
-				      <input type="text" class="form-control" name="search" placeholder="Search for...">
-				      <span class="input-group-btn">
-				        <button class="btn btn-default" type="submit" value="Search">Search</button>
-				      </span>
-					</div>			
-				</form>
 			</div>
-			{% if changeUser %}
-				<div class="col-sm-6">
-				{% include "changeUser.html" %}
-				</div>
-			{% endif %}
-			{% if publishNew %}
-				<div class="col-sm-6">
+			<div class="col-sm-4">
+				{% include "searchForm.html" %}
+			</div>
+			<div class="col-sm-6">
+				{% if publishNew %}
 				{% include "publishNew.html" %}
-				</div>
-			{% endif %}
-			{% if showGoals %}
-				<div class="col-sm-6">
-				{% include "goals.html" %}
-			{% endif %}
-			{% if goals %}
+				{% endif %}
+			</div>
+			<div class="col-sm-6">
+				{% if goalsForm %}
+				{% include "goalsForm.html" %}
+				{% endif %}
+			</div>
+			<div class="col-sm-12">
+				{% if goals %}
 				{% for row in goals %}
-					<div class="col-sm-6 col-md-4">
-						<div class="thumbnail">
-								<h5>{{ row.goal }}</h5>
-								 <p><b>Subject: {{row.subject|e}}</b></p>
-								 <p><b>Recommended for year: {{row.year|e}}</b></p>
-								<p>{{row.text|e}}</p>							
-						</div>
-					</div>
+					{% set goalID = row.id %}
+					{% include "goals.html" %}
 				{% endfor %}
-			{% endif %}
+				{% endif %}
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="row">
-					{% if content %}
+				{% if content %}
 					{% for row in content %}
-						<div class="col-sm-6 col-md-4">
-							<div class="thumbnail">
-								{% if row.file %}
-								<img src="http://192.168.33.10/Fantastic-Teaching/uploads/{{ row.file|e }}" alt="article image">
-								{% endif %}
-								<div class="caption">
-								<h3>{{row.title|e}}</h3>
-								<p class="grayText"><i>Published {{row.timestamp|e}}</i></p>
-								 <p><b>Subject: {{row.subject|e}}</b></p>
-								 <p><b>Recommended for year: {{row.year|e}}</b></p>
-								<p>{{row.text|e}}</p>
-								{% if row.video %}
-								<div class="embed-responsive embed-responsive-16by9">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/{{row.video|raw}}" frameborder="0" allowfullscreen></iframe>
-								</div>
-								{% endif %}
-								{# <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> #}
-								</div>
-							</div>
-						</div>
+						{% include "singleContent.html" %}
 					{% endfor %}
-					{% endif %}
-				</div>
+				{% endif %}
+			</div>
+			<div class="col-sm-12">
 			{% if showBtn %}
 				<form method='post' action=''>
-					<button class='btn btn-default' type='submit' name='showAll'>Show all content</button>
+				<button class='btn btn-default' type='submit' name='showAll'>Show all content</button>
 				</form>
 			{% endif %}
 			</div>
