--- a/templates/singleGoal.html
+++ b/templates/singleGoal.html
@@ -3,14 +3,14 @@
 		<h4>{{ row.goal }}</h4>
 		<p>Subject: {{row.subject|e}}</p>
 		<p>For year: {{row.year|e}}</p>
-			{% if connectedContent %}
-				{% include connectedContents.html %}
-			{% endif %} 
-	</div>
-	<div class="form-group">
-		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="showConnections" value="{{goalID}}"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span> Show connected content</button>
-		</form>
+		{% if connectedContent %}
+			<h5>Content connected to this goal:</h5>
+			<ul>
+			{% for row in connectedContent %}
+			<li>{{row.title|e}}</li>
+			{% endfor %}
+			</ul>
+		{% endif %}
 	</div>
 	<div class="form-group">
 		<form method="post" action="">
