updated templates, forms & twig vars
moved code to templates added if/else to remove php notices

--- a/templates/connectedContents.html
+++ b/templates/connectedContents.html
@@ -1,7 +1,6 @@
-
-			<h5>Content connected to this goal:</h5>
-			<ul>
-			{% for row in connectedContent %}
-			<li>{{row.title|e}}</li>
-			{% endfor %}
-			</ul>
+<h5>Content connected to this goal:</h5>
+<ul>
+	{% for contentrow in connectedContent %}
+		<li>{{contentrow.title|e}}</li>
+	{% endfor %}
+</ul>
