--- a/templates/goalsForm.html
+++ b/templates/goalsForm.html
@@ -2,7 +2,7 @@
 <form method='post' action="">
 	<div class="form-group">
 		<label for="title">Goal:</label>
-		<input class="form-control" type='text' name='goal' placeholder="What's your goal?">
+		<input class="form-control" autofocus required type='text' name='goal' placeholder="What's your goal?">
 	</div>
 	<div class="form-group">
 		<label for="subject">Belongs in subject:</label>
