--- a/templates/singleContent.html
+++ b/templates/singleContent.html
@@ -22,7 +22,7 @@
 								{% if row.username == user %}
 									<div class="form-group">
 										<form method="post" action="">
-											<button class="transparentbtn" type="submit" name="deleteContentID" value="{{row.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete  {{row.id}}  this content</button>
+											<button class="transparentbtn" type="submit" name="deleteContentID" value="{{row.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete this content</button>
 										</form>
 									</div>
 								{% endif %}
