--- a/templates/goals.html
+++ b/templates/goals.html
@@ -1,11 +1,14 @@
+{% set goalID = row.id %}
 <div class="col-sm-6 col-md-4">
 	<div class="thumbnail">
 		<h4>{{ row.goal }}</h4>
 		<p>Subject: {{row.subject|e}}</p>
 		<p>For year: {{row.year|e}}</p>
-			{% if connectedContent %}
-				{% include connectedContents.html %}
-			{% endif %} 
+		{% if row.id == buttonId %}
+		{% if connectedContent %}
+		{% include "connectedContents.html" %}
+		{% endif %} 
+		{% endif %} 
 	</div>
 	<div class="form-group">
 		<form method="post" action="">
