--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -2,7 +2,7 @@
 <form method='post' action="" enctype="multipart/form-data">
 	<div class="form-group">
 		<label for="title">Title:</label>
-		<input class="form-control" type='text' name='title' placeholder='Add title...'>
+		<input class="form-control" autofocus required type='text' name='title' placeholder='Add title...'>
 	</div>
 	<div class="form-group">
 		<label for="subject">Subject:</label>
