Updated searchform and SQL-query
functionality to search without subject or year

--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -2,6 +2,7 @@
 	<div class="form-group">
 		<label for="subject">Search within subject:</label>
 		<select class="form-control" name="searchSubject">
+		<option value=""> </option>
 		<option value="Svenska">Svenska</option>
 		<option value="Geografi">Geografi</option>
 		<option value="Historia">Historia</option>
@@ -11,6 +12,7 @@
 	<div class="form-group">
 		<label for="year">Search on recommended year:</label>
 		<select class="form-control" name='searchYear'>
+		<option value=""> </option>
 		<option value="1-2">1-2</option>
 		<option value="3-5">3-5</option>
 		<option value="6-7">6-7</option>
