--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -2,6 +2,7 @@
 	<div class="form-group">
 		<label for="subject">Search within subject:</label>
 		<select class="form-control" name="searchSubject">
+		<option value="all">All subject</option>
 		<option value="Svenska">Svenska</option>
 		<option value="Geografi">Geografi</option>
 		<option value="Historia">Historia</option>
@@ -11,6 +12,7 @@
 	<div class="form-group">
 		<label for="year">Search on recommended year:</label>
 		<select class="form-control" name='searchYear'>
+		<option value="all">All years</option>
 		<option value="1-2">1-2</option>
 		<option value="3-5">3-5</option>
 		<option value="6-7">6-7</option>
@@ -22,5 +24,5 @@
 	    <span class="input-group-btn">
 	    <button class="btn btn-default" type="submit" value="Search">Search</button>
 	    </span>
-	</div>			
+	</div>
 </form>
