--- a/templates/singleContent.html
+++ b/templates/singleContent.html
@@ -38,23 +38,20 @@
 								</div>
 								{% endif %}
 								</div>
-								{% if content %}
+
+								{% if singleContent %}
 								<div class="rating">
 									<form method='post' action=''>
 										<input type="hidden" name="contentRatingId" value="{{row.id}}">
 										<input type="hidden" name="userRatingId" value="{{sessionUserID}}">
 										<button type="submit" name="submitUp" value="1"><span class="glyphicon glyphicon-menu-up btn-lg" aria-hidden="true" ></span></button>
-								
 										{% for row in viewRating %}
-
-												{% if contentID == rating.content_id %}
 												<div style="margin-left: 20px;">{{row.rating|e}}</div>
-												{%endif%}
 										{% endfor %}
 										<button type="submit" name="submitDown" value="-1"><span class="glyphicon glyphicon-menu-down btn-lg" aria-hidden="true" ></span></button>
 									</form>
 								</div>
 								{% endif %}
+
 							</div>
 						</div>
-
