--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,14 +1,17 @@
 <h3>Welcome {{user}}!</h3>
+<p>You have a {{userLevel}} account.</p>
 <div class="col-xs-12 col-sm-3 form-group">
 	<form method="post" action="">
 		<button class="transparentbtn" type="submit" name="publishNew" value="publish"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Content</button>
 	</form>	
 </div>
-<div class="col-xs-12 col-sm-3 form-group">
-	<form method="post" action="">
-		<button class="transparentbtn" type="submit" name="showGoals" value="goalsForm"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Goal</button>
-	</form>	
-</div>
+{% if userLevel == "Premium" %}
+	<div class="col-xs-12 col-sm-3 form-group">
+		<form method="post" action="">
+			<button class="transparentbtn" type="submit" name="showGoals" value="goalsForm"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Goal</button>
+		</form>	
+	</div>
+{% endif %}
 <div class="col-xs-12 col-sm-3 form-group">
 	<form method="get" action="">
 		<button class="transparentbtn" type="submit" name="changePassword" value="{{sessionUserID}}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Password</button>
