Updated rating functioanilty
now you can only see rating that belongs to that content

--- a/templates/singleContent.html
+++ b/templates/singleContent.html
@@ -45,7 +45,9 @@
 										<input type="hidden" name="contentRatingId" value="{{row.id}}">
 										<input type="hidden" name="userRatingId" value="{{sessionUserID}}">
 										<button type="submit" name="submitUp" value="1"><span class="glyphicon glyphicon-menu-up btn-lg" aria-hidden="true" ></span></button>
-										{% for row in viewRating %}
+										{% set rowId = row.id %}
+										{% for row in viewRating if row.content_id == rowId %}
+										
 												<div style="margin-left: 20px;">{{row.rating|e}}</div>
 										{% endfor %}
 										<button type="submit" name="submitDown" value="-1"><span class="glyphicon glyphicon-menu-down btn-lg" aria-hidden="true" ></span></button>
