Rating button change
+ content.html
+ singleContent.html
+ Added style class

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,13 @@
 			background-color: transparent;
 			background-image: none;
 		}
+		.ratingButton{
+			border: none;
+			background-color: transparent;
+		}
+		.ratingWidth{
+			width: 40px;
+		}
 	</style>
 </head>
 <body>
@@ -111,7 +118,7 @@
 				</form>
 			{% endif %}
 			</div>
-		</div><!--row closed-->		
+		</div><!--row closed-->
 	</div><!--container closed-->
 </body>
 </html>
