--- a/templates/content.html
+++ b/templates/content.html
@@ -26,6 +26,26 @@
 				</form>
 			</div>
 		{% endif %}
+	<div class="row">
+		<div class="col-xs-1">
+			{% if allContent %}
+				<div class="rating">
+					<form method='post' action=''>
+						<input type="hidden" name="contentRatingId" value="{{row.id}}">
+						<input type="hidden" name="userRatingId" value="{{sessionUserID}}">
+						<button type="submit" name="submitUp" value="1" class="glyphicon glyphicon-menu-up btn-md ratingButton ratingWidth" aria-hidden="true"></button>
+						{% set rowId = row.id %}
+							<div class="ratingWidth">
+							{% for row in viewRating if row.content_id == rowId %}
+									<div class="text-center">{{row.rating|e }}</div>
+							{% endfor %}
+							</div>
+						<button type="submit" name="submitDown" value="-1" class="glyphicon glyphicon-menu-down btn-md ratingButton ratingWidth" aria-hidden="true"></button>
+					</form>
+				</div>
+			{% endif %}
+		</div>
+	<div class="col-xs-11">
 		<div class="caption">
 			<h4>{{row.title|e}}</h4>
 			<p class="grayText"><i>Published {{row.timestamp|e}} Author: {{row.username}}</i></p>
@@ -43,23 +63,7 @@
 			</form>
 		</div>
 		</div>
-
-		{% if allContent %}
-		<div class="rating">
-			<form method='post' action=''>
-				<input type="hidden" name="contentRatingId" value="{{row.id}}">
-				<input type="hidden" name="userRatingId" value="{{sessionUserID}}">
-				<button type="submit" name="submitUp" value="1"><span class="glyphicon glyphicon-menu-up btn-lg" aria-hidden="true" ></span></button>
-				{% set rowId = row.id %}
-				<div style="margin-left: 20px;">
-				{% for row in viewRating if row.content_id == rowId %}
-						{{row.rating|e}}
-				{% endfor %}
-				</div>
-				<button type="submit" name="submitDown" value="-1"><span class="glyphicon glyphicon-menu-down btn-lg" aria-hidden="true" ></span></button>
-			</form>
-		</div>
-		{% endif %}
-
+	</div>
+	</div>
 	</div>
 </div>
