--- a/templates/singleContent.html
+++ b/templates/singleContent.html
@@ -26,34 +26,44 @@
 										</form>
 									</div>
 								{% endif %}
-								<div class="caption">
-								<h4>{{row.title|e}}</h4>
-								<p class="grayText"><i>Published {{row.timestamp|e}} Author: {{row.username}}</i></p>
-								<p>Subject: {{row.subject|e}}</p>
-								<p>Recommended for year: {{row.year|e}}</p>
-								<p>{{row.text|e}}</p>
-								{% if row.video %}
-								<div class="embed-responsive embed-responsive-16by9">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/{{row.video|raw}}" frameborder="0" allowfullscreen></iframe>
-								</div>
-								{% endif %}
+
+							<div class="row">
+
+								<div class="col-xs-1">
+									{% if singleContent %}
+									<div class="rating">
+										<form method='post' action=''>
+											<input type="hidden" name="contentRatingId" value="{{row.id}}">
+											<input type="hidden" name="userRatingId" value="{{sessionUserID}}">
+											<button type="submit" name="submitUp" value="1" class="glyphicon glyphicon-menu-up btn-sx ratingButton ratingWidth" aria-hidden="true"></button>
+											{% set rowId = row.id %}
+											<div class="ratingWidth">
+											{% for row in viewRating if row.content_id == rowId %}
+													<div class="text-center">{{row.rating|e}}</div>
+											{% endfor %}
+										</div>
+											<button type="submit" name="submitDown" value="-1" class="glyphicon glyphicon-menu-down btn-sx ratingButton ratingWidth" aria-hidden="true"></button>
+										</form>
+									</div>
+									{% endif %}
 								</div>
 
-								{% if singleContent %}
-								<div class="rating">
-									<form method='post' action=''>
-										<input type="hidden" name="contentRatingId" value="{{row.id}}">
-										<input type="hidden" name="userRatingId" value="{{sessionUserID}}">
-										<button type="submit" name="submitUp" value="1"><span class="glyphicon glyphicon-menu-up btn-lg" aria-hidden="true" ></span></button>
-										{% set rowId = row.id %}
-										{% for row in viewRating if row.content_id == rowId %}
-										
-												<div style="margin-left: 20px;">{{row.rating|e}}</div>
-										{% endfor %}
-										<button type="submit" name="submitDown" value="-1"><span class="glyphicon glyphicon-menu-down btn-lg" aria-hidden="true" ></span></button>
-									</form>
+								<div class="col-xs-11">
+									<div class="caption">
+									<h4>{{row.title|e}}</h4>
+									<p class="grayText"><i>Published {{row.timestamp|e}} Author: {{row.username}}</i></p>
+									<p>Subject: {{row.subject|e}}</p>
+									<p>Recommended for year: {{row.year|e}}</p>
+									<p>{{row.text|e}}</p>
+									{% if row.video %}
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/{{row.video|raw}}" frameborder="0" allowfullscreen></iframe>
+									</div>
+									{% endif %}
+									</div>
 								</div>
-								{% endif %}
+
+							</div>
 
 							</div>
 						</div>
