--- a/templates/content.html
+++ b/templates/content.html
@@ -51,6 +51,7 @@
 			<p class="grayText"><i>Published {{row.timestamp|e}} Author: {{row.username}}</i></p>
 			<p>Subject: {{row.subject|e}}</p>
 			<p>Recommended for year: {{row.year|e}}</p>
+			<p>Estimated teaching hours: {{row.estimate|e}}</p>
 			<p>{{row.text|e}}. . .</p>
 			{% if row.video %}
 		<div class="embed-responsive embed-responsive-16by9">
