--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 				</div>
 				<div class="col-sm-12">
 					{% if goals %}
-						{% for row in goals %}
+						{% for rowGoals in goals %}
 							{% include "goals.html" %}
 						{% endfor %}
 					{% endif %}
