--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -20,7 +20,7 @@
 		</select>
 	</div>
 	<div class="input-group">
-	    <input type="text" class="form-control" name="search" placeholder="Search for...">
+	    <input type="search" class="form-control" name="search" pattern="[^'\x22]+" title="Do not use '' characters" placeholder="Search for...">
 	    <span class="input-group-btn">
 	    <button class="btn btn-default" type="submit" value="Search">Search</button>
 	    </span>
