--- a/templates/goals.html
+++ b/templates/goals.html
@@ -1,10 +1,10 @@
-{% set goalID = row.id %}
+{% set goalID = rowGoals.id %}
 <div class="col-sm-6 col-md-4">
 	<div class="thumbnail">
-		<h4>{{ row.goal }}</h4>
-		<p>Subject: {{row.subject|e}}</p>
-		<p>For year: {{row.year|e}}</p>
-		{% if row.id == buttonId %}
+		<h4>{{ rowGoals.goal }}</h4>
+		<p>Subject: {{rowGoals.subject|e}}</p>
+		<p>For year: {{rowGoals.year|e}}</p>
+		{% if rowGoals.id == buttonId %}
 		{% if connectedContent %}
 		{% include "connectedContents.html" %}
 		{% endif %} 
@@ -12,12 +12,12 @@
 	</div>
 	<div class="form-group">
 		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="showConnections" value="{{goalID}}"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span> Show connected content</button>
+			<button class="transparentbtn" type="submit" name="showConnections" value="{{goalID}}"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span> Expand</button>
 		</form>
 	</div>
 	<div class="form-group">
 		<form method="post" action="">
-			<button class="transparentbtn" type="submit" name="deleteGoalID" value="{{row.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete goal</button>
+			<button class="transparentbtn" type="submit" name="deleteGoalID" value="{{rowGoals.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete goal</button>
 		</form>
 	</div>
 </div>
