--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -23,11 +23,26 @@
 		</select>
 	</div>
 	<div class="form-group">
+		<label for="estimate">Estimated teaching hours this exercise might need in class:</label>
+		<select class="form-control" name='estimate'>
+		<option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
+		</select>
+	</div>
+	<div class="form-group">
 		<label for="text">Text:</label>
 		<textarea class="form-control" name='text' placeholder='Write your text...'></textarea>
+	</div>
+	<div class="form-group">
 		<input type="hidden" name="publishNew" value=NULL>
-		<input class="form-control" type='text' name='video' placeholder='Embed video..'>
+	<div class="form-group">
+		<label for="video">URL for youtube clip:</label>
+		<input class="form-control" type="url" name="video" pattern="https?://.+" title="Include http://" name='video' placeholder='Embed video..'>
+	</div>
+	<div class="form-group">
+		<label for="fileToUpload">Choose file to upload:</label>
 		<input class="form-control" type="file" name="fileToUpload" id="fileToUpload">
+	</div>
+	<div class="form-group">
 		<input class="btn btn-default" type='submit' name='postContent' value='Post'>
 	</div>
 </form>
