--- a/templates/content.html
+++ b/templates/content.html
@@ -14,7 +14,7 @@
 							{% endfor %}
 						</select>
 						<input type="hidden" name="connectedContentID" value="{{row.id}}">
-						<button class="transparentbtn" type="submit" name="connect"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Connect content</button>
+						<button class="transparentbtn" type="submit" name="connect" value=" "><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Connect content</button>
 					</div>
 				</form>
 			</div>
