--- a/templates/index.html
+++ b/templates/index.html
@@ -56,10 +56,13 @@
 	<div class="container-fluid">
 		<div class="row user-header">
 			<div class="col-lg-12">
-				<a class="h1link" href="http://192.168.33.10/Fantastic-Teaching/"><h1>{{title}}</h1></a>
+				<a class="h1link" href="/Fantastic-Teaching/"><h1>{{title}}</h1></a>
 			</div>
 			<div class="col-sm-8">
+			<a href="/Fantastic-Teaching/?/Page/admin">Admin</a>
+				{% if admin %}
 				{% include "admin.html" %}
+				{% endif %}
 				<div class="row">
 					<div class="col-sm-12">
 						{% if changeUser %}
@@ -69,7 +72,9 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
+				{% if search %}
 				{% include "searchForm.html" %}
+				{% endif %}
 			</div>
 			<div class="col-sm-6">
 				{% if publishNew %}
@@ -101,15 +106,18 @@
 			</div>
 			<div class="col-sm-12">
 				{% if allContent %}
-					{% for row in allContent %}
-						{% include "content.html" %}
-					{% endfor %}
+					{% if goals %}
+						{% for row in allContent %}
+							{% include "content.html" %}
+						{% endfor %}
+					{% endif %}
+					
 				{% endif %}
 				{% if singleContent %}
-					{% for row in singleContent %}
-						{% include "singleContent.html" %}
-					{% endfor %}
-				{% endif %}
+						{% for row in singleContent %}
+							{% include "singleContent.html" %}
+						{% endfor %}
+					{% endif %}
 			</div>
 			<div class="col-sm-12">
 			{% if getAllContentBTN %}
