--- a/templates/menu.html
+++ b/templates/menu.html
@@ -16,7 +16,7 @@
 	</form>
 </div>
 <div class="col-xs-12 col-sm-3 form-group">
-	<form method="get" action="">
+	<form method="post" action="">
 		<button class="transparentbtn" type="submit" name="logout" value="{{sessionUserID}}">
 		<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out <b>{{user}}</b></button>
 	</form>
