--- a/templates/index.html
+++ b/templates/index.html
@@ -56,12 +56,34 @@
 	<div class="container-fluid">
 		<div class="row user-header">
 			<div class="col-lg-12">
-				<a class="h1link" href="/Fantastic-Teaching/"><h1>{{title}}</h1></a>
+				<a class="h1link" href="/Fantastic-Teaching/?/Page/home"><h1>{{title}}</h1></a>
 			</div>
 			<div class="col-sm-8">
+
+<a href="/Fantastic-Teaching/?/Content/viewArticleUses">
+			<h5>Mina artiklar</h5></a>
+
+
+<ul class="list-group">
+<!-- // bheövs sen som villkor if row.user ==  sessionUserID -->
+	{% for row in viewArticleUses  %}
+			<li class="list-group-item">
+			<span class="badge">{{row.uses|e}}</span>
+			{{row.title|e}}
+			</li>
+	{% endfor %}
+</ul>
+
+
+
+
+
 			<a href="/Fantastic-Teaching/?/Page/admin">Admin</a>
 				{% if admin %}
 				{% include "admin.html" %}
+				{% endif %}
+				{% if viewArticleUses %}
+				{% include "viewArticleUses.html" %}
 				{% endif %}
 				<div class="row">
 					<div class="col-sm-12">
