--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 				<div class="col-sm-6">
 					<h3>Login:</h3>
 					<div class="form-group">
-						<form method="post" action="">
+						<form method="post" action="/Fantastic-Teaching/?/Page/login">
 						<label for="username">Username</label>
 						<input required type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 						<label for="Password">Password</label>
